--- a/closed-captions/index.html
+++ b/closed-captions/index.html
@@ -9,13 +9,13 @@
 	<link rel="stylesheet" href="css.css">
 </head>
 <body>
-	<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/vrP-_T-h9YM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+	<iframe width="560" height="315" src="https://youtu.be/Pn7M9PpQEgo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	<div id="video-placeholder"></div>
 	<div id="closed-captions">
 		<p class="voice1">
 			Officer K D 6 - 3 . 7. Let’s begin. Ready?
 		</p>
-		<p class="voice2">
+		<p class="voice2"> 
 			Yes, sir
 		</p>
 		<p class="voice1">
