--- a/closed-captions/index.html
+++ b/closed-captions/index.html
@@ -9,187 +9,50 @@
 	<link rel="stylesheet" href="css.css">
 </head>
 <body>
-	<iframe width="560" height="315" src="https://youtu.be/Pn7M9PpQEgo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<h1>BARK</h1> <h2>BARK</h2> <h3>BARK</h3>
+<!--	<iframe width="560" height="315" src="https://www.youtube.com/embed/Pn7M9PpQEgo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
 	<div id="video-placeholder"></div>
 	<div id="closed-captions">
-		<p class="voice1">
-			Officer K D 6 - 3 . 7. Let’s begin. Ready?
-		</p>
-		<p class="voice2"> 
-			Yes, sir
-		</p>
-		<p class="voice1">
-			Recite your baseline.
-		</p>
-		<p class="voice2">
-			And blood-black nothingness began to spin
-		</p>
-		<p class="voice2">
-			A system of cells interlinked within cells,
-		</p>
-		<p class="voice2">
-			interlinked within cells, interlinked within one stem.
-		</p>
-		<p class="voice3">
-			Fuck off, skin-job!
-		</p>
-		<p class="voice2">
-			And dreadfully distinct against the dark, a tall white fountain played...
-		</p>
-		<p class="voice1">
-			Cells.
-		</p>
-		<p class="voice2">
-			Cells.
-		</p>
-		<p class="voice1">
-			Have you ever been in an institution?
-		</p>
-		<p class="voice1">
-			Cells.
-		</p>
-		<p class="voice2">
-			Cells.
-		</p>
-		<p class="voice1">
-			Do they keep you in a cell?
-		</p>
-		<p class="voice1">
-			Cells.
-		</p>
-		<p class="voice2">
-			Cells.
-		</p>
-		<p class="voice1">
-			When you're not performing your duties, do they keep you in a little box?
-		</p>
-		<p class="voice1">
-			Cells.
-		</p>
-		<p class="voice2">
-			Cells.
-		</p>
-		<p class="voice1">
-			Interlinked.
-		</p>
-		<p class="voice2">
-			Interlinked.
-		</p>
-		<p class="voice1">
-			What's it like to hold the hand of someone you love?
-		</p>
-		<p class="voice1">
-			Interlinked.
-		</p>
-		<p class="voice2">
-			Interlinked.
-		</p>
-		<p class="voice1">
-			Did they teach you how to feel, finger to finger?
-		</p>
-		<p class="voice1">
-			Interlinked.
-		</p>
-		<p class="voice2">
-			Interlinked.
-		</p>
-		<p class="voice1">
-			Do you long for having your heart interlinked?
-		</p>
-		<p class="voice1">
-			Interlinked.
-		</p>
-		<p class="voice2">
-			Interlinked.
-		</p>
-		<p class="voice1">
-			Do you dream about being interlinked?
-		</p>
-		<p class="voice2">
-			Interlinked.
-		</p>
-		<p class="voice1">
-			What's it like to hold your child in your arms?
-		</p>
-		<p class="voice1">
-			Interlinked.
-		</p>
-		<p class="voice2">
-			Interlinked.
-		</p>
-		<p class="voice1">
-			Do you feel that there's a part of you that's missing?
-		</p>
-		<p class="voice1">
-			Interlinked.
-		</p>
-		<p class="voice2">
-			Interlinked.
-		</p>
-		<p class="voice1">
-			Within cells interlinked.
-		</p>
-		<p class="voice2">
-			Within cells interlinked.
-		</p>
-		<p class="voice1">
-			Why don't you say that three times: "within cells interlinked"
-		</p>
-		<p class="voice2">
-			Within cells interlinked.
-		</p>
-		<p class="voice2">
-			Within cells interlinked.
-		</p>
-		<p class="voice2">
-			Within cells interlinked.
-		</p>
-		<p class="voice4">
-			We're done.
-		</p>
-		<p class="voice4">
-			Constant K.
-		</p>
-		<p class="voice4">
-			You can pick up your bonus.
-		</p>
-		<p class="voice2">
-			Thank you, sir.
-		</p>
+<p class="voice1">Marley Sit.</p>
+<p class="voice2">This class. Is a classic example.</p>
+<p class="voice2">Of a dog.. Who has foolishly been allowed to believe that he..</p>
+<p class="voice2">is the alpha male of the pac, and therefor</p>
+<p class="voice2">he can never be a happy animal.</p>
+<p class="voice3">Yeah he looks pretty miserable.</p>
+<p class="voice2">You joker.</p>
+<p class="voice2">Rotate in. And lose the sunglasses.</p>
+<p class="voice2">Dog likes to be looked within the eye</p>
+<p class="voice1">Got. It. You got him?</p>
+<p class="voice3">Yeah..</p>
+<p class="voice1">Okay</p>
+<p class="voice2">So call your dogs.</p>
+<p class="voice2">All right dogs on the left. on the count of three</p>
+<p class="voice2">One. Two. Three.</p>
+<p class="voice2">Let's. Go. Very</p>
+<p class="voice2">nice. Very good.</p>
+<p class="voice2">Goooood.</p>
+<p class="">.</p>
+<p class="voice2">Correct him Weight in that dog.</p>
+<p class="voice2">All right. All right</p>
+<p class="voice2">Let's line up again. Class</p>
+<p class="voice2">Of having confidence in</p>
+<p class="voice2">I shall now demonstrate</p>
+<p class="voice2">All right. Mr. Grogan.</p>
+<p class="voice3">Sorry..</p>
+<p class="voice2">May i All right. Even an</p>
+<p class="voice2">obey his leader. Marley.</p>
+<p class="voice2">He'll. Blegh.</p>
+<p class="voice2">Marley.  MARLEY Marley Marley</p>
+<p class="voice2">MARLEEY</p>
+<p class=""voice3>Carefull, Marley no! Marley</p>
+<p class="voice2">AAHG! Thats is. HE IS OUT!</p>
+<p class="voice3">Sorry usually does this with poodles</p>
+<p class="voice2">That dog is a bad influence on the others.</p>
+<p class="voice2">now... Leg humping Is like a virus.</p>
+<p class="voice2">Once it takes hold of the group.. no</p>
+<p class="voice2">He has got to go.</p>
 
 
-		<p class="">Cells</p>
-		<p class="">-Cells</p>
-		<p class="">Have you ever been in an institution. Cells</p>
-		<p class="">-Cells</p>
-		<p class="">When you're not performing your duties, do they keep you in a little box? Cells.</p>
-		<p class="">-Cells</p>
-		<p class="">Interlinked. What’s it like to hold the hand of someone you love?</p>
-		<p class="">-Interlinked </p>
-		<p class="">-Interlinked</p>
-		<p class="">Within cells interlinked</p>
-		<p class="">-Within cells interlinked</p>
-		<p class="">Dreadfully</p>
-		<p class="">-Dreadfully</p>
-		<p class="">What's it like to be filled with dread? Dreadfully</p>
-		<p class="">-Dreadfully</p>
-		<p class="">Do you like being separated from other people? Distinct</p>
-		<p class="">-Distinct</p>
-		<p class="">Dreadfully distinct</p>
-		<p class="">-Dreadfully distinct</p>
-		<p class="">Dark</p>
-		<p class="">-Dark</p>
-		<p class="">Within cells interlinked</p>
-		<p class="">-Within cells interlinked</p>
-		<p class="">Withing one stem</p>
-		<p class="">-Withing one stem</p>
-		<p class="">And dreadfully distinct</p>
-		<p class="">-And dreadfully distinct</p>
-		<p class="">Against the dark</p>
-		<p class="">-Against the dark</p>
-		<p class="">A tall white fountain played</p>
-		<p class="">- A tall white fountain played</p>
-		<p class="">You're not even close to baseline</p>
 
 	</div>
 	
