--- a/closed-captions/index.html
+++ b/closed-captions/index.html
@@ -9,14 +9,14 @@
 	<link rel="stylesheet" href="css.css">
 </head>
 <body>
-<h1>BARK</h1> <h2>BARK</h2> <h3>BARK</h3>
+<h1>BARK</h1> <h2>BARK</h2> <h3>BARK</h3> <h4>BARK</h4> <h5>BARK</h5> <h6>BARK</h6>
 <!--	<iframe width="560" height="315" src="https://www.youtube.com/embed/Pn7M9PpQEgo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
 	<div id="video-placeholder"></div>
 	<div id="closed-captions">
 <p class="voice1">Marley Sit.</p>
 <p class="voice2">This class. Is a classic example.</p>
-<p class="voice2">Of a dog.. Who has foolishly been allowed to believe that he..</p>
-<p class="voice2">is the alpha male of the pac, and therefor</p>
+<p class="voice2">Of a dog.. Who has foolishly been allowed to believe</p>
+<p class="voice2">He is the alpha male of the pack. And therefor 
 <p class="voice2">he can never be a happy animal.</p>
 <p class="voice3">Yeah he looks pretty miserable.</p>
 <p class="voice2">You joker.</p>
@@ -26,21 +26,21 @@
 <p class="voice3">Yeah..</p>
 <p class="voice1">Okay</p>
 <p class="voice2">So call your dogs.</p>
-<p class="voice2">All right dogs on the left. on the count of three</p>
+<p class="voice2">Allright dogs on the left. on the count of three. </p>
 <p class="voice2">One. Two. Three.</p>
-<p class="voice2">Let's. Go. Very</p>
-<p class="voice2">nice. Very good.</p>
+<p class="voice2">Let's go. </p>
+<p class="voice2">Very nice. Very good.</p>
 <p class="voice2">Goooood.</p>
 <p class="">.</p>
 <p class="voice2">Correct him Weight in that dog.</p>
-<p class="voice2">All right. All right</p>
-<p class="voice2">Let's line up again. Class</p>
-<p class="voice2">Of having confidence in</p>
-<p class="voice2">I shall now demonstrate</p>
+<p class="voice2">Allright. Allright class comone</p>
+<p class="voice2">Let's line up again. Class it's a simple question</p>
+<p class="voice2">Of having confidence in your own authority</p>
+<p class="voice2">I shall now demonstrate a simple walk</p>
 <p class="voice2">All right. Mr. Grogan.</p>
 <p class="voice3">Sorry..</p>
-<p class="voice2">May i All right. Even an</p>
-<p class="voice2">obey his leader. Marley.</p>
+<p class="voice2">May i. Allright. Even an unrulley dog</p>
+<p class="voice2">Likes to obey his leader. Marley.</p>
 <p class="voice2">He'll. Blegh.</p>
 <p class="voice2">Marley.  MARLEY Marley Marley</p>
 <p class="voice2">MARLEEY</p>
