--- a/closed-captions/index.html
+++ b/closed-captions/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="css.css">
 </head>
 <body>
-<h1>BARK</h1> <h2>BARK</h2> <h3>BARK</h3> <h4>BARK</h4> <h5>BARK</h5> <h6>BARK</h6>
+<h1>BARK</h1> <h2>BARK</h2> <h3>BARK</h3> <h4>BARK</h4> <h5>BARK</h5> <h6>BARK</h6> <h7>MARLEEEEEEY</h7>
 <!--	<iframe width="560" height="315" src="https://www.youtube.com/embed/Pn7M9PpQEgo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
 	<div id="video-placeholder"></div>
 	<div id="closed-captions">
@@ -33,18 +33,18 @@
 <p class="voice2">Goooood.</p>
 <p class="">.</p>
 <p class="voice2">Correct him Weight in that dog.</p>
-<p class="voice2">Allright. Allright class comone</p>
+<p class="voice2">Alright. Alright class comone</p>
 <p class="voice2">Let's line up again. Class it's a simple question</p>
 <p class="voice2">Of having confidence in your own authority</p>
 <p class="voice2">I shall now demonstrate a simple walk</p>
-<p class="voice2">All right. Mr. Grogan.</p>
+<p class="voice2">Alright? Mr. Grogan...</p>
 <p class="voice3">Sorry..</p>
 <p class="voice2">May i. Allright. Even an unrulley dog</p>
 <p class="voice2">Likes to obey his leader. Marley.</p>
-<p class="voice2">He'll. Blegh.</p>
+<p class="voice2">heil. Blegh.</p>
 <p class="voice2">Marley.  MARLEY Marley Marley</p>
 <p class="voice2">MARLEEY</p>
-<p class=""voice3>Carefull, Marley no! Marley</p>
+<p class="voice3">Carefull, Marley no! Marley</p>
 <p class="voice2">AAHG! Thats is. HE IS OUT!</p>
 <p class="voice3">Sorry usually does this with poodles</p>
 <p class="voice2">That dog is a bad influence on the others.</p>
