--- a/closed-captions/index.html
+++ b/closed-captions/index.html
@@ -44,12 +44,12 @@
 <p class="voice2">heil. Blegh.</p>
 <p class="voice2">Marley.  MARLEY Marley Marley</p>
 <p class="voice2">MARLEEY</p>
-<p class="voice3">Carefull, Marley no! Marley</p>
+<p class="voice3">Carefull, Marley no! Marley...</p>
 <p class="voice2">AAHG! Thats is. HE IS OUT!</p>
-<p class="voice3">Sorry usually does this with poodles</p>
+<p class="voice3">Sorry he usually does this with poodles</p>
 <p class="voice2">That dog is a bad influence on the others.</p>
 <p class="voice2">now... Leg humping Is like a virus.</p>
-<p class="voice2">Once it takes hold of the group.. no</p>
+<p class="voice2">Once it takes hold of the group.. No!</p>
 <p class="voice2">He has got to go.</p>
 
 
