--- a/closed-captions/index.html
+++ b/closed-captions/index.html
@@ -16,7 +16,7 @@
 <p class="voice1">Marley Sit.</p>
 <p class="voice2">This class. Is a classic example.</p>
 <p class="voice2">Of a dog.. Who has foolishly been allowed to believe</p>
-<p class="voice2">He is the alpha male of the pack. And therefor 
+<p class="voice2">He is the alpha male of the pack. And therefore 
 <p class="voice2">he can never be a happy animal.</p>
 <p class="voice3">Yeah he looks pretty miserable.</p>
 <p class="voice2">You joker.</p>
@@ -31,7 +31,7 @@
 <p class="voice2">Let's go. </p>
 <p class="voice2">Very nice. Very good.</p>
 <p class="voice2">Goooood.</p>
-<p class="">.</p>
+<p class=""></p>
 <p class="voice2">Correct him Weight in that dog.</p>
 <p class="voice2">Alright. Alright class comone</p>
 <p class="voice2">Let's line up again. Class it's a simple question</p>
@@ -41,14 +41,14 @@
 <p class="voice3">Sorry..</p>
 <p class="voice2">May i. Allright. Even an unrulley dog</p>
 <p class="voice2">Likes to obey his leader. Marley.</p>
-<p class="voice2">heil. Blegh.</p>
+<p class="voice2">Heel. Blegh.</p>
 <p class="voice2">Marley.  MARLEY Marley Marley</p>
 <p class="voice2">MARLEEY</p>
 <p class="voice3">Carefull, Marley no! Marley...</p>
 <p class="voice2">AAHG! Thats is. HE IS OUT!</p>
 <p class="voice3">Sorry he usually does this with poodles</p>
 <p class="voice2">That dog is a bad influence on the others.</p>
-<p class="voice2">now... Leg humping Is like a virus.</p>
+<p class="voice2">Now... Leg humping Is like a virus.</p>
 <p class="voice2">Once it takes hold of the group.. No!</p>
 <p class="voice2">He has got to go.</p>
 
